# open-fork

./: .gitignore  Cargo.toml  Makefile  build.rs  diesel.toml  index.html  package-lock.json  package.json  tsconfig.dev.json  tsconfig.json  vite.config.js
migrations/db/: 20230428043846_init.sql
migrations/db/2023-02-14-050232_init/: down.sql  up.sql
migrations/seed/: 20230428043847_init.sql
migrations/seed/2023-02-14-050233_init/: down.sql
src/: _foundation.scss  _variables.scss  assets_endpoint.rs  main.rs  result.rs  style.scss
src/components/: _index.scss  image.rs  mod.rs
src/components/card/: _index.scss  mod.rs
src/components/pagination/: mod.rs
src/layout/: _index.scss  mod.rs
src/layout/page/: _index.scss  mod.rs
src/models/: database.rs  mod.rs  page.rs  pagination.rs  schema.rs
src/models/ext/: applyable.rs  mod.rs  query_builder.rs  table.rs
src/models/recipe/: filter.rs  list.rs  mod.rs
src/pages/: _home.scss  home.rs  mod.rs
src/templates/layout/: assets.rs  mod.rs  page.rs
